@@ -1,11 +1,11 @@
-reader_network 0.69 - A package of utilities to record and work with
+reader_network 0.70 - A package of utilities to record and work with
 multicast radar data in ASTERIX format. (radar as in air navigation
 surveillance).
 
 Work in progress. Although I use this software everyday (in a realtime quality
 monitorization environment), this software is EXPERIMENTAL.
 
-Copyright (C) 2002-2015 Diego Torres <diego dot torres at gmail dot com>
+Copyright (C) 2002-2017 Diego Torres <diego dot torres at gmail dot com>
 
 See bin/conf/example.conf as a working example of the reader_network
 config file. All options are detailed inside.
