@@ -1,5 +1,5 @@
 rm distrib/rn070.tar.bz2
 tar cvfj distrib/rn070.tar.bz2 \
-    bin/client* bin/client_time* \
+    bin/client* \
     bin/reader_network* \
-    bin/reader_rrd3* bin/cleanast* bin/scripts/* bin/conf/*
+    bin/reader_rrd3* bin/cleanast* bin/scripts/* bin/conf/* bin/filter*
